Add a few missing items to the Shareables list

--- a/src/main/resources/itemweights.yml
+++ b/src/main/resources/itemweights.yml
@@ -49,6 +49,7 @@ Party_Shareables:
         - Wood_Spade
         - Wood_Pickaxe
         - Wood_Axe
+        - Bow
         - Diamond_Helmet
         - Diamond_Chestplate
         - Diamond_Leggings
