--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -174,6 +174,8 @@ Skills:
         Salvage_Anvil_ID: 41
         Salvage_tools: true
         Salvage_armor: true
+        # Ask for a confirmation when a player tries to repair an enchanted item
+        Confirm_Required: true
     Smelting:
         Level_Cap: 0
     Swords:
