--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,7 +16,7 @@ authors: [GJ, NuclearW, bm01, Glitchfinder, TfT_02, t00thpick1]
 website: http://dev.bukkit.org/server-mods/mcmmo/
 
 main: com.gmail.nossr50.mcMMO
-softdepend: [Spout]
+softdepend: [Spout, CombatTag]
 load: STARTUP
 
 commands:
