--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -1,9 +1,9 @@
 #
 #  Advanced configuration
-#  
-#  For advanced users only! There is no need to change anything here. 
 #
-#  You can customize almost every aspect of every skill here.  
+#  For advanced users only! There is no need to change anything here.
+#
+#  You can customize almost every aspect of every skill here.
 #  Its mainly here if you've changed "Experience.Formula.Curve_Modifier"
 #  Configure at what level you get better with certain abilities.
 #
@@ -412,3 +412,16 @@ Spout:
         Tier2: 400
         Tier3: 600
         Tier4: 800
+Kraken:
+    #
+    #  Customize the kraken!
+    ###
+    Enabled: true
+    Tries_Before_Release: 50
+    Health: 50
+    Name: The Kraken
+    Attack_Interval_Seconds: 1
+    Attack_Damage: 1
+    Unleashed_Message:
+        Server: [PLAYER] has unleashed the kraken!
+        Player: THE KRAKEN HAS BEEN UNLEASHED!
