--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -422,6 +422,7 @@ Kraken:
     Name: The Kraken
     Attack_Interval_Seconds: 1
     Attack_Damage: 1
+    Global_Sounds: true
     Unleashed_Message:
         Server: (PLAYER) has unleashed the kraken!
         Player: THE KRAKEN HAS BEEN UNLEASHED!
