--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -284,6 +284,12 @@ Experience:
         Mobspawners:
             Multiplier: 0
 
+        # Limit the amount of experience a player can earn:
+        # Threshold (amount of experience) per Time_Interval (in minutes)
+        Deminished_Returns:
+            Threshold: 20000
+            Time_Interval: 10
+
         # Experience gained in every skill will get multiplied by this value. 1.0 by default, 2.0 means two times as much
         Multiplier:
             PVP: 1.0
