--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -426,3 +426,6 @@ Kraken:
     Unleashed_Message:
         Server: (PLAYER) has unleashed the kraken!
         Player: THE KRAKEN HAS BEEN UNLEASHED!
+    Defeated_Message:
+        Escape: You have escaped from the kraken!
+        Killed: You have slain the kraken!
