--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,6 +26,9 @@ General:
     Verbose_Logging: false
     # Should mcMMO over-write configs to update, or make new ones ending in .new?
     Config_Update_Overwrite: true
+    # Enable potato easter egg?
+    Potato_Explosion_Enabled: true
+    Potato_Explosion_Chance: 1
 
 Scoreboards:
     Inspect:
