--- a/src/main/resources/itemweights.yml
+++ b/src/main/resources/itemweights.yml
@@ -25,6 +25,32 @@ Item_Weights:
     Coal: 10
     Coal_Ore: 10
 
+    # Item weights for armor and tools
+    Diamond_Sword: 150
+    Diamond_Spade: 150
+    Diamond_Pickaxe: 150
+    Diamond_Axe: 150
+    Diamond_Helmet: 150
+    Diamond_Chestplate: 150
+    Diamond_Leggings: 150
+    Diamond_Boots: 150
+    Gold_Sword: 75
+    Gold_Spade: 75
+    Gold_Pickaxe: 75
+    Gold_Axe: 75
+    Gold_Helmet: 75
+    Gold_Chestplate: 75
+    Gold_Leggings: 75
+    Gold_Boots: 75
+    Iron_Sword: 60
+    Iron_Spade: 60
+    Iron_Pickaxe: 60
+    Iron_Axe: 60
+    Iron_Helmet: 60
+    Iron_Chestplate: 60
+    Iron_Leggings: 60
+    Iron_Boots: 60
+
 # Items in this section will get added to the Misc share category.
 # Case insensitive, though the name must be exactly the same as set in the Bukkit Material enum.
 Party_Shareables:
