--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,7 +27,7 @@ General:
     # Should mcMMO over-write configs to update, or make new ones ending in .new?
     Config_Update_Overwrite: true
     # Enable potato easter egg?
-    Potato_Explosion_Enabled: true
+    Potato_Explosion_Enabled: false
     Potato_Explosion_Chance: 1
 
 Scoreboards:
