--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -423,6 +423,7 @@ Kraken:
     Attack_Interval_Seconds: 1
     Attack_Damage: 1
     Global_Sounds: true
+    Allow_Escaping: false
     Unleashed_Message:
         Server: (PLAYER) has unleashed the kraken!
         Player: THE KRAKEN HAS BEEN UNLEASHED!
