--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -277,8 +277,9 @@ Double_Drops:
 ###
 Experience:
     Gains:
+        # Experience gained from mobs not naturally spawned will get multiplied by this value.  0 by default.
         Mobspawners:
-            Enabled: false
+            Multiplier: 0
 
         # Experience gained in every skill will get multiplied by this value. 1.0 by default, 2.0 means two times as much
         Multiplier:
