Add option to use scoreboards for power level display, similar to the Spout titles. This will NOT override any existing plugin that uses the overhead scoreboard slot.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -56,6 +56,9 @@ Scoreboards:
     Skillname:
         Use: true
         Display_Time: 10
+    # Should mcMMO display power levels on scoreboards?
+    Power_Level:
+        Use: true
 
 Mob_Healthbar:
     # Default display for mob health bars - HEARTS, BAR, or DISABLED
