Fixed bug where Nether Quartz wasn't included in Smelting or item sharing

--- a/src/main/resources/itemweights.yml
+++ b/src/main/resources/itemweights.yml
@@ -10,6 +10,8 @@
 #####
 Item_Weights:
     Default: 5
+    Quartz: 200
+    Quartz_Ore: 200
     Emerald: 150
     Emerald_Ore: 150
     Diamond: 100
