Changed powerlevel display setting to disabled by default.
Because scoreboards are being cached by Minecraft in scoreboard.dat it
is no user friendly to enabled this by default. Users will have to
manually delete this file in order to actually disable this.
Described in #1105

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -58,7 +58,7 @@ Scoreboards:
         Display_Time: 10
     # Should mcMMO display power levels on scoreboards?
     Power_Level:
-        Use: true
+        Use: false
 
 Mob_Healthbar:
     # Default display for mob health bars - HEARTS, BAR, or DISABLED
