--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -313,6 +313,8 @@ Experience:
         Gravel: 40
         Mycel: 40
         Sand: 40
+        Snow: 20
+        Snow_Block: 40
         Soul_Sand: 40
     Woodcutting:
         Oak: 70
