Added config option for Acrobatics teleport cooldown,
also updated the changelog.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -179,6 +179,7 @@ Skills:
         Enabled_For_PVE: true
         Prevent_AFK_Leveling: true
         Prevent_Dodge_Lightning: false
+        Prevent_XP_After_Teleport: true
         Level_Cap: 0
     Archery:
         Enabled_For_PVP: true
