--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -166,7 +166,7 @@ Abilities:
     Limits:
        Tree_Feller_Threshold: 500
     Tools:
-        Durability_Loss_Enabled: true
+        # Use more tool durability while using abilities. Set Durability_Loss to 0 to disable the extra durability damage.
         Durability_Loss: 2
 
 #
