--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -366,6 +366,16 @@ Experience:
         Redstone_Ore: 150
         Sandstone: 30
         Stone: 30
+    Repair:
+        Base: 1000.0
+        Wood: 0.6
+        Stone: 1.3
+        Iron: 2.5
+        Gold: 0.3
+        Diamond: 5.0
+        Leather: 1.6
+        String: 1.8
+        Other: 1.5
     Smelting:
         Coal_Ore: 10
         Diamond_Ore: 75
