Min value for IronArm configurable

--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -390,8 +390,10 @@ Skills:
         IronGrip_ChanceMax: 100.0
         IronGrip_MaxBonusLevel: 1000
 
+        # IronArm_BonusMin: Minimum bonus damage for unarmed
         # IronArm_BonusMax: Maximum bonus damage for unarmed
         # IronArm_IncreaseLevel: Bonus damage increases every increase level
+        IronArm_BonusMin: 3
         IronArm_BonusMax: 8
         IronArm_IncreaseLevel: 50
     #
