--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -320,6 +320,9 @@ Skills:
         Bleed_MaxTicks: 3
         Bleed_BaseTicks: 2
 
+        # Counter_RequiresBlock: Determines if blocking is required to trigger counter attack
+        Counter_RequiresBlock: true
+
         # Counter_ChanceMax: Maximum chance of triggering a counter attack
         # Counter_MaxBonusLevel: On this level, the chance to Counter will be Counter_ChanceMax
         Counter_ChanceMax: 30.0
