--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -90,10 +90,34 @@ MySQL:
 #  Settings for Hardcore mode
 ###
 Hardcore:
-    Enabled: false
-    Death_Stat_Loss_Penalty_Percentage: 75
-    Vampirism: false
-    Vampirism_Stat_Leech_Percentage: 5
+    Death_Stat_Loss:
+        Penalty_Percentage: 75
+        Enabled:
+            Acrobatics: false
+            Archery: false
+            Axes: false
+            Fishing: false
+            Herbalism: false
+            Mining: false
+            Repair: false
+            Swords: false
+            Taming: false
+            Unarmed: false
+            Woodcutting: false
+    Vampirism:
+        Leech_Percentage: 5
+        Enabled:
+            Acrobatics: false
+            Archery: false
+            Axes: false
+            Fishing: false
+            Herbalism: false
+            Mining: false
+            Repair: false
+            Swords: false
+            Taming: false
+            Unarmed: false
+            Woodcutting: false
 
 #
 #  Settings for SMP Mods
