Move experience related settings from config.yml to experience.yml

--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -4,7 +4,7 @@
 #  For advanced users only! There is no need to change anything here.
 #
 #  You can customize almost every aspect of every skill here.
-#  Its mainly here if you've changed "Experience.Formula.Curve_Modifier"
+#  Its mainly here if you've customized the experience formula.
 #  Configure at what level you get better with certain abilities.
 #
 #####
