--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -548,9 +548,12 @@ permissions:
     mcmmo.ability.taming.callofthewild.all:
         description: Allows access to the Call of the Wild abilities
         children:
+            mcmmo.ability.taming.callofthewild.horse: true
             mcmmo.ability.taming.callofthewild.ocelot: true
             mcmmo.ability.taming.callofthewild.renamepets: true
             mcmmo.ability.taming.callofthewild.wolf: true
+    mcmmo.ability.taming.callofthewild.horse:
+        description: Allows players to summon Horses with Call of the Wild
     mcmmo.ability.taming.callofthewild.ocelot:
         description: Allows players to summon Ocelots with Call of the Wild
     mcmmo.ability.taming.callofthewild.renamepets:
